ログインユーザーアクセス用のAPIを作成
